--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Update gist with WakaTime summary1
 on:
   schedule:
-    - cron: '40 1 * * *'
+    - cron: '1 * * * *'
 jobs:
   update-gist:
     runs-on: ubuntu-latest
