--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: Update gist
-        uses: angelgods/wakatime-sync@master
+      - name: wakatime-sync
+        uses: superman66/wakatime-sync@v1.0.0
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: ${{ secrets.GIST_ID}}
