--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,14 +1,14 @@
 name: Update gist with WakaTime summary
 on:
   schedule:
-    - cron: '2 * * * *'
+    - cron: '40 1 * * *'
 jobs:
   update-gist:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: wakatime-sync
-        uses: superman66/wakatime-sync@v1.0.0
+      - name: Update gist
+        uses: angelgods/wakatime-sync@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: ${{ secrets.GIST_ID}}
